--- a/package.json
+++ b/package.json
@@ -46,6 +46,8 @@
     "react-icons": "^5.5.0",
     "react-pdf": "^9.2.1",
     "react-router-dom": "^7.5.3",
+    "react-to-print": "^3.1.0",
+    "recharts": "^2.15.3",
     "sonner": "^2.0.3",
     "tailwind-merge": "^3.2.0",
     "tailwindcss": "^4.1.5",
