--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "cmdk": "^1.1.1",
     "date-fns": "^3.6.0",
     "hugeicons-react": "^0.3.0",
+    "input-otp": "^1.4.2",
     "lucide-react": "^0.507.0",
     "next-themes": "^0.4.6",
     "react": "^19.0.0",
