--- a/package.json
+++ b/package.json
@@ -43,12 +43,13 @@
     "lucide-react": "^0.507.0",
     "next-themes": "^0.4.6",
     "react": "^19.0.0",
-    "react-day-picker": "^8.10.1",
+    "react-day-picker": "^9.8.1",
     "react-dom": "^19.0.0",
     "react-hook-form": "^7.56.3",
     "react-icons": "^5.5.0",
     "react-pdf": "^9.2.1",
     "react-router-dom": "^7.5.3",
+    "react-to-pdf": "^2.0.1",
     "react-to-print": "^3.1.0",
     "recharts": "^2.15.3",
     "sonner": "^2.0.3",
