--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "clsx": "^2.1.1",
     "cmdk": "^1.1.1",
     "date-fns": "^3.6.0",
+    "date-fns-tz": "^3.2.0",
     "firebase": "^12.0.0",
     "hugeicons-react": "^0.3.0",
     "input-otp": "^1.4.2",
