--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "cmdk": "^1.1.1",
     "date-fns": "^3.6.0",
     "date-fns-tz": "^3.2.0",
+    "file-saver": "^2.0.5",
     "firebase": "^12.0.0",
     "hugeicons-react": "^0.3.0",
     "input-otp": "^1.4.2",
